--- a/Modelo predict de fallos.Rmd
+++ b/Modelo predict de fallos.Rmd
@@ -270,4 +270,4 @@ mc
 100 * sum(diag(mc)) / sum(mc)
 ```
 
-He aumentado mi capacidad predictiva a más de un 96%.
+He aumentado mi capacidad predictiva a más de un 96%
